@@ -15,6 +15,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #8826: Properly load old-style "expires" attribute in http.cookies.
+
 - Issue #1690103: Fix initial namespace for code run with trace.main().
 
 - Issue #7395: Fix tracebacks in pstats interactive browser.
